tests/error/variadic_miss_end.gw
fun void test(...) {
  vararg.start;
}
